# test

./: .gitignore  AGENTS.md  CLAUDE.md  DEVELOPMENT.md  DOCUMENTATION.md  LICENSE  README.md  lefthook.yml  packages.md  pyproject.toml
.claude/: settings.json
.config/: wt.toml
.github/scripts/: create-app-token.sh
.github/workflows/: ci.yml  publish.yaml  release.yaml  sync-news.yaml
.pi/: settings.json
.plans/: concurrent-wobbling-rabbit.md  melodic-sniffing-twilight.md  woolly-napping-ritchie.md
.review/: arch.md  docs.md  performance.md  readability.md  security.md  tests.md  ux.md
changelog/: config.yaml
changelog/unreleased/: 01-expose-tenzir-test-as-a-library.md  01-honor-no-color-for-python-api-consumers.md  01-library-mode-and-package-dirs.md  accurate-aggregate-pass-and-fail-percentages.md  add-pre-compare-transforms-for-non-deterministic-output.md  auto-detect-tenzir-binary-with-uvx-fallback.md  avoid-python-backtraces-on-ctrlc-interrupts.md  enum-serialization-in-python-fixture-config.md  fixture-assertion-hooks-for-post-test-validation.md  fixture-name-test-selection.md  fixture-tag-test-selection.md  improve-parallel-suite-scheduling-and-correctness-checks.md  improve-stdin-input-handling-with-security-validation-and-documentation.md  improved-cli-help-with-examples-and-documentation.md  improved-config-override-log-readability.md  inline-dependencies-for-project-fixtures.md  inline-dependency-installation-control.md  native-docker-compose-fixture-with-structured-options.md  nested-dataclass-options-for-fixtures.md  node-output-capture-and-crash-reporting.md  parallel-suite-execution.md  project-lifecycle-hooks.md  python-313-minimum-requirement.md  run-skipped-tests-with-run-skipped-flag.md  runner-independent-suite-requirements.md  shared-container-runtime-helpers-for-fixtures.md  skip-fixture-initialization-for-suites-with-all-static-skips.md  standalone-fixture-mode-with-fixture-cli-option.md  stdin-file-support-for-piping-data-to-tests.md  structured-options-for-fixtures.md  substring-matching-for-match-patterns.md  tuple-unpacking-in-diff-runner-for-multi-word-commands.md  verbose-output-flag-for-test-results.md  version-checks-with-current-tql-pipelines.md
example/: README.md
example-library/: README.md
example-library/bar/: package.yaml
example-library/foo/: package.yaml  test.yaml
example-package/: package.yaml
example-package/operators/: filter.tql  parse.tql
example-package/tests/: ops.tql  ops.txt  twist.tql  twist.txt
example-project/: README.md
example-project/fixtures/: README.md  __init__.py  container.py  http.py  server.py
example-satellite/: README.md  fixtures.py
tests/: test_cli.py  test_config.py  test_container_runtime.py  test_diff_runner.py  test_docker_compose_fixture.py  test_engine_operations.py  test_fixture_mode.py  test_hooks.py  test_node_fixture.py  test_python_runner.py  test_run.py  test_run_config.py  test_runner_registry.py  test_shell_runner.py
(+232 files in other folders)
